Bug 380083 - switching views does not hide toolsbar
Summary: switching views does not hide toolsbar
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: sidebarview (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-05-22 11:23 UTC by Jonathan Riddell
Modified: 2017-07-06 13:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Riddell 2017-05-22 11:23:06 UTC
Starting in sidebar view I click menu -> configure -> icon view -> OK

A toolbar appears at the top of the window

Configure -> sidebar view -> OK

toolbar does not disappear

if there is text in the sidebar view search box it not doesn't show the clear icon
Comment 1 Marco Martin 2017-07-06 13:28:26 UTC
Git commit 7ac9bc5729825d22ff98c82c1edb1c75b3734ca6 by Marco Martin.
Committed on 06/07/2017 at 13:27.
Pushed by mart into branch 'master'.

reset toolbar items when the module shows

repopulate (or depopulate) the toolbar when the active view
changes (but its instance was already loaded)

M  +9    -0    classic/ClassicMode.cpp
M  +1    -0    classic/ClassicMode.h
M  +9    -0    icons/IconMode.cpp
M  +1    -0    icons/IconMode.h
M  +2    -1    sidebar/SidebarMode.cpp

https://commits.kde.org/systemsettings/7ac9bc5729825d22ff98c82c1edb1c75b3734ca6