reset toolbar items when the module shows

repopulate (or depopulate) the toolbar when the active view
changes (but its instance was already loaded)
BUG:380083