icons/IconMode.h
@@ -43,6 +43,7 @@ public:
 
 protected:
     QList<QAbstractItemView*> views() const Q_DECL_OVERRIDE;
+    bool eventFilter(QObject* watched, QEvent* event) Q_DECL_OVERRIDE;
 
 public Q_SLOTS:
     void searchChanged( const QString& text ) Q_DECL_OVERRIDE;
